# PolyGL

./: .gitignore  CMakeLists.txt  Makefile  README.md  ROADMAP.md
examples/: window.c
include/: polygl.h  vk_triangle.c
src/: log.h  poly.c  polyvk.h  vulkan_device_setup.c  vulkan_device_setup.h
src/graphics/: vulkan.c
src/vulkan/: vk_command.c  vk_frame.c  vk_image.c  vk_instance.c  vk_pipeline.c  vk_present.c  vk_queue.c  vk_shader.c  vk_surface.c  vk_synchronization.c
src/window/: win32.c
test/: Makefile  main.c  main.cpp
test/shaders/: simple_shader.vert
